tdf#150494 LanguageTool: Add placeholder text with default value info

With this patch, the Language Tool dialog works as follows:

- The first time the tool is enabled, a default URL is entered as text

- If the URL is left empty, a placeholder text is shown saying that leaving this entry empty will cause the default URL to be used

- If another URL is defined by the user, than this is the one used

Change-Id: Id31fca0e44091aff3c77a9be8b639a20437b1b7c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142197
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>