cui/source/options/optlanguagetool.hxx
@@ -18,6 +18,9 @@
  */
 #pragma once
 #include <sfx2/tabdlg.hxx>
+#include <rtl/ustring.hxx>
+
+inline constexpr OUStringLiteral LANGUAGETOOL_DEFAULT_URL = u"https://api.languagetool.org/v2";
 
 class OptLanguageToolTabPage : public SfxTabPage
 {
